--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@ fetch('https://stattrakmrkt.onrender.com/api/market')
         async function loadMarketData() {
             const list = document.getElementById('market-list');
             try {
-                const response = await fetch(`${API_BASE}/api/market`);
+               const response = await fetch('https://stattrakmrkt.onrender.com/api/market');
                 cachedMarket = await response.json();
                 renderItems(cachedMarket, 'market-list', true);
             } catch (err) {
@@ -850,6 +850,7 @@ function startCartAnimation() {
 </div>
 </body>
 </html>
+
 
 
 
