--- a/index.html
+++ b/index.html
@@ -268,33 +268,47 @@
     border-radius: 0 0 18px 18px;
 }
         /* --- НОВЫЕ СТИЛИ МОДАЛЬНОГО ОКНА (В НИЗ БЛОКА STYLE) --- */
+/* ИСПРАВЛЕННЫЕ СТИЛИ МОДАЛЬНОГО ОКНА */
 .modal-overlay {
     display: none;
     position: fixed;
-    inset: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background: rgba(0, 0, 0, 0.85);
     backdrop-filter: blur(15px);
     z-index: 10000;
-    align-items: flex-end; 
+    align-items: center;
     justify-content: center;
-    transition: opacity 0.3s ease;
+    overflow: hidden;
 }
 
 .modal-content {
-    width: 100%;
-    background: #0f172a; 
-    border-radius: 24px 24px 0 0;
-    padding: 20px 20px 40px 20px;
-    transform: translateY(100%);
-    transition: transform 0.4s cubic-bezier(0.16, 1, 0.3, 1);
-    border-top: 1px solid rgba(0, 210, 255, 0.3);
-    display: flex;
-    flex-direction: column;
-    max-height: 90vh;
+    width: 92%;
+    max-width: 400px;
+    background: #0f172a;
+    border-radius: 24px;
+    padding: 24px 20px 30px 20px;
+    transform: translateY(20px);
+    opacity: 0;
+    transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
+    border: 1px solid rgba(0, 210, 255, 0.2);
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+    margin: 20px;
+    max-height: 85vh;
+    overflow-y: auto;
+    position: relative;
 }
 
-.modal-overlay.active { display: flex; opacity: 1; }
-.modal-overlay.active .modal-content { transform: translateY(0); }
+.modal-overlay.active {
+    display: flex;
+}
+
+.modal-overlay.active .modal-content {
+    transform: translateY(0);
+    opacity: 1;
+}
 
 /* Убираем стрелки у поля ввода цены */
 input::-webkit-outer-spin-button,
@@ -944,3 +958,4 @@ ${item.price || '0.00'}
     </script>
 </body>
 </html>
+
