--- a/index.html
+++ b/index.html
@@ -779,11 +779,11 @@ function startCartAnimation() {
 
     // 3. Список легендарных скинов (те самые ссылки, которые всегда грузятся)
  const premiumSkins = [
-    'https://steamcdn-a.akamaihd.net/apps/730/icons/econ/default_generated/weapon_ak47_cu_ak47_empress_light_large.9f5c6fd84599b2356c6ba003c6fa0788e0a19b9b.png',
-    'https://steamcdn-a.akamaihd.net/apps/730/icons/econ/default_generated/weapon_m4a1_cu_m4a1_hyper_beast_light_large.2b2a6922e53db2b348ab7ad89ac2e1070fb7a9a8.png',
-    'https://steamcdn-a.akamaihd.net/apps/730/icons/econ/default_generated/weapon_awp_cu_awp_medusa_light_large.7de39c9b307ae734793831556366952c13109f4d.png',
-    'https://steamcdn-a.akamaihd.net/apps/730/icons/econ/default_generated/weapon_deagle_cu_deagle_kumichodragon_light_large.24c44b09b24260d67d55434cbc69939956c1205f.png',
-    'https://steamcdn-a.akamaihd.net/apps/730/icons/econ/default_generated/weapon_knife_karambit_aa_karambit_marblefade_light_large.54ef3b1b45f8b9fe563e6e77eef01d7217b78eaf.png'
+    'https://i.imgur.com/Q6ZqD1L.png', // AK-47
+    'https://i.imgur.com/zM7U4fY.png', // AWP  
+    'https://i.imgur.com/8N3rV7b.png', // Knife
+    'https://i.imgur.com/Gp2sT9k.png', // M4A1
+    'https://i.imgur.com/X6Wj5fQ.png'  // Gloves
 ];
 
     // Позиции для создания эффекта "горки"
@@ -830,6 +830,7 @@ function startCartAnimation() {
     </script>
 </body>
 </html>
+
 
 
 
