--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>STATTRAK MARKET PRO | TITANIUM ULTIMATE</title>
+    <title>STATTRAK MARKET PROO | TITANIUM ULTIMATE</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         /* ================================================================
@@ -830,6 +830,7 @@ function startCartAnimation() {
     </script>
 </body>
 </html>
+
 
 
 
